--- a/GeneticEvolution/GeneticEvolution.csproj
+++ b/GeneticEvolution/GeneticEvolution.csproj
@@ -63,6 +63,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Grama.cs" />
+    <Compile Include="Coelho.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
