--- a/GeneticEvolution/GeneticEvolution.csproj
+++ b/GeneticEvolution/GeneticEvolution.csproj
@@ -64,7 +64,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Grama.cs" />
-    <Compile Include="Coelho.cs" />
+    <Compile Include="Predador.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
