--- a/TelaInicial/Desktop.csproj
+++ b/TelaInicial/Desktop.csproj
@@ -160,6 +160,9 @@
   <ItemGroup>
     <None Include="Resources\carregandoLogin1280x720.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\montaria_cavalo_desmontado.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\EmguCv\packages\AutoItX.Dotnet.3.3.14.5\build\AutoItX.Dotnet.targets" Condition="Exists('..\EmguCv\packages\AutoItX.Dotnet.3.3.14.5\build\AutoItX.Dotnet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
